# 4WheelDetectionRobot

./: .gitignore  MIGRATION_HUMBLE.md  README.md  env_humble.bash  setup.sh  setup_humble.sh
config/: humble.env
config/humble/: deps-apt.list
docs/: NAVIGATION_TUNING.md  SIM_DATASET_PROJECTION_FIX.md  SLAM_DRIFT_ANALYSIS.md  TOPIC_COMMUNICATION.md  fig4-topic-communication.mmd
scripts/: analyze_mapping_session.py  auto_build_map.sh  auto_build_map_camera.sh  check_camera_topics.sh  convert_to_trt_engine.sh  export_osnet_onnx.py  export_yolo_onnx.py  gazebo_gpu_env.sh  gazebo_preflight.sh  generate_sim_dataset.py  install_deps_humble.sh  kill_nav.sh  kill_sim.sh  launch_mapping_terminals.py  launch_navigation_terminals.py  overlay_session_waypoints.py  setup_detection_venv.sh  setup_from_profile.sh  source_ws.sh  test_manhattan_tsp.py  test_waypoint_gates.py  validate_backprojection.py
src/detection_pkg/: CMakeLists.txt  package.xml
src/detection_pkg/config/: detection.rviz  detection_params.yaml
src/detection_pkg/configs/: train.yaml
src/detection_pkg/detection_pkg/: __init__.py  backprojection.py  embedding_reid.py  map_overlay.py  motion_compensation.py  waypoint_reid.py  waypoint_track.py
src/detection_pkg/launch/: detection.launch.py
src/detection_pkg/scripts/: clip_detector_node.py  clip_detector_wrapper.sh  probe_batch_size.py  train_sim_yolo26.py
src/mickrobot_description/: CMakeLists.txt  package.xml  开发文档.md
src/mickrobot_description/launch/: bringup.launch.py  bringup_classic.launch.py
src/mickrobot_description/materials/scripts/: paperclips.material
src/mickrobot_description/rviz/: urdf_gazebo.rviz
src/mickrobot_description/urdf/: mickrobot_stl.urdf  mickrobot_stl.urdf.xacro  mickrobot_stl_rviz.urdf  mickrobot_stl_rviz.urdf.xacro  mickrobot_ugv.urdf.xacro  mickrobot_ugv_classic.urdf.xacro  robot.gazebo
src/mickrobot_description/urdf/mesh/: board_camera_radar_assembly.stl  ugv_body.stl  ugv_lidar.stl  ugv_sensor_bracket.stl  ugv_stereo_camera.stl  ugv_wheel.stl
src/mickrobot_description/worlds/: nav.world  small_house.world  small_house_gz.world
src/navigation_pkg/: CMakeLists.txt  package.xml  setup.py  开发文档_C.md
src/navigation_pkg/behavior_trees/: navigate_to_pose_fast_recovery.xml
src/navigation_pkg/config/: nav2_params.yaml  nav2_params_baseline_20260615.yaml
src/navigation_pkg/launch/: navigation.launch.py  navigation_humble.launch.py  patrol_rviz.launch.py  playback_rviz.launch.py
src/navigation_pkg/navigation_pkg/: __init__.py  collision_check.py  manhattan_tsp.py  mission_plot.py  mission_recorder.py  obstacle_detect.py  sim_pose_sync.py  trajectory_tracker.py  waypoint_io.py
src/navigation_pkg/result/: README.md
src/navigation_pkg/rviz/: navigation.rviz  playback.rviz
src/navigation_pkg/scripts/: analyze_navigation_run.py  playback_mission.py  send_goal.py  waypoint_patrol.py
src/perception_pkg/: CMakeLists.txt  package.xml  开发文档.md
src/perception_pkg/config/: amcl_params.yaml  cartographer_real.lua  cartographer_sim.lua  ekf_sim.yaml  paperclips_small_house.yaml  rtabmap_slam_real.yaml  rtabmap_slam_sim.yaml  slam_classic.rviz  slam_monitor.rviz  slam_toolbox_params.yaml  slam_toolbox_params_sim.yaml
src/perception_pkg/include/perception_pkg/: cmd_vel_guard_node.hpp  odom_to_tf_node.hpp  save_map_snapshot_node.hpp
src/perception_pkg/launch/: auto_slam.launch.py  auto_slam_camera.launch.py  cmd_vel_guard.launch.py  humble_sim_slam.launch.py  perception.launch.py  perception_humble.launch.py  record_bag.launch.py  rviz_slam.launch.py  save_map.launch.py  slam_from_bag.launch.py  teleop_keyboard.launch.py  teleop_slider.launch.py
src/perception_pkg/maps/: README.md
src/perception_pkg/scripts/: auto_explore.py  cmd_vel_guard.py  keyboard_teleop.py  odom_to_tf.py  patrol_mapper.py  save_map_snapshot.py  save_map_trigger.py  slider_teleop.py
src/perception_pkg/src_cpp/: cmd_vel_guard_node.cpp  odom_to_tf_node.cpp
