<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mickrobot_description</name>
  <version>0.1.0</version>
  <description>mickrobot UGV 六轮底盘 URDF 描述包（URDF、Launch、仿真世界）</description>
  <maintainer email="maintainer@todo.com">mickrobot-team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- [24.04/Jazzy] Gazebo Sim -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <!-- [Humble迁移] Ubuntu 22.04 + Gazebo Classic -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
